k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopkart

spec:

  ingressClassName: nginx

  rules:

  - host: shopkart.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: frontend

            port:
              number: 3000

      - path: /api

        pathType: Prefix

        backend:

          service:
            name: backend

            port:
              number: 5000
